--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,9 +44,11 @@ Use it to make something cool, have fun, and share what you've learned.
 --------------------------------------------------------------*/
 @import "components/buttons";
 @import "components/cover";
+@import "components/cards";
 @import "components/group";
 @import "components/lists";
 @import "components/nav";
+@import "components/pagination";
 @import "components/query";
 @import "components/search";
 
