--- a/sass/base/_fields.scss
+++ b/sass/base/_fields.scss
@@ -14,10 +14,10 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-	border-radius: var(--wp--custom--border-radius--md);
-	border: 2px solid;
+	border-radius: 0;
+	border: 0;
 	color: inherit;
-	background-color: transparent;
+	background-color: white;
 	line-height: 1;
 	padding: 12px var(--wp--preset--spacing--10);
 	width: 100%;
