--- a/sass/components/_group.scss
+++ b/sass/components/_group.scss
@@ -29,3 +29,16 @@
     gap: .5rem;
     align-items: center;
 }
+
+
+.wp-block-group.is-layout-grid {
+    @media ($below-mobile) {
+        grid-template-columns: 1fr;
+    }
+}
+
+.wp-block-group.is-position-sticky {
+    @media ($above-tablet) {
+        top: calc(80px + var(--wp-admin--admin-bar--position-offset, 0px));
+    }
+}
