--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -9,17 +9,100 @@
     }
     
     @media ($below-tablet) {
+        
         bottom: 0;
-        backdrop-filter: blur(8px);
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: space-between;
 
-        & > .wp-block-group:has(.wp-block-site-logo){
-            display: none;
+        .wp-block-group:has(.wp-block-site-logo) {
+            position: absolute;
+            top: -90vh;
+            transition: top .3s ease-in-out, opacity .5s ease;
+
+            .wp-block-site-logo img {
+                max-width: 94%;
+            }
+        }
+
+        .scrolled & {
+            
+            .wp-block-group:has(.wp-block-site-logo) {
+                top: -120vh;
+                opacity: 0;
+                
+            }
+        }
+
+        #mega-menu-wrap-max_mega_menu_1 .mega-menu-toggle.mega-menu-open + #mega-menu-max_mega_menu_1 {
+            display: grid;
+            height: 100vh;
+            transition: height .3s ease-in-out, display .5s ease allow-discrete;
         }
 
         #navbar {
             border: 0 !important;
-            padding-bottom: 2.5rem;
-            
+
+            .mega-menu-wrap {
+                width: 100% !important;
+                display: flex;
+                flex-direction: column-reverse;
+
+                #mega-menu-max_mega_menu_1 {
+                    height: 0vh;
+                    overflow: auto;
+                    transition: height .3s ease-in-out, display .5s ease allow-discrete;
+                    //display: grid;
+                    align-content: flex-start;
+                    grid-template-columns: repeat(4, 1fr);
+                    grid-template-rows: auto;
+                    gap: 0.25rem;
+                    
+                    // dos primeros items
+                    & > *:first-child {
+                        grid-column: 1 / 4;
+                        margin-bottom: 2rem;
+                    }
+
+                    & > *:nth-child(2) {
+                        grid-column: 4 / 5;
+                        margin-top: .25rem;
+                        margin-bottom: 2rem;
+                    }
+
+                    & > *:nth-child(n+3):nth-last-child(n+3) {
+                        grid-column: 1 / 5;
+                    }
+
+                    // Linkedin
+                    & > *:nth-last-child(4) {
+                        order: 9;
+                        grid-column: 3 / 5 !important;
+                        & > a.mega-menu-link {
+                            background-color: transparent !important;
+                            color: var(--wp--preset--color--primary) !important;
+                        }
+                    }
+                    
+                    // Selector idiomas
+                    & > *:nth-last-child(2) {
+                        grid-column: 1 / 3;
+                        & > a.mega-menu-link {
+                            background-color: transparent !important;
+                            color: var(--wp--preset--color--primary) !important;
+                            padding: 1.5rem !important;
+                        }
+                    }
+                    
+                }
+            }
+
+            .mega-menu-toggle {
+                padding: 0 10px !important;
+                margin-bottom: 2rem;
+                backdrop-filter: blur(8px);
+            }
         }
     }
 
@@ -27,11 +110,20 @@
         .masthead-menu-contact {
             display: none;
         }
+
+        img.mega-menu-logo {
+            max-height: 100% !important;
+        }
     }
     
     #navbar {
         border-top: 1px solid var(--wp--preset--color--neutral-80);
         border-bottom: 1px solid var(--wp--preset--color--neutral-80);
+    }
+
+    .masthead-menu-contact .wp-block-button__link::after{
+        width: 24px;
+        height: 24px;
     }
 
     body.scrolled & {
