--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -28,7 +28,7 @@
                     }
                 }
             }
-        }
+        } 
     }
     
     ul.max-mega-menu {
@@ -57,10 +57,6 @@
                 margin-top: 1rem !important;
             }
         
-            li:nth-child(-n+3) {
-                justify-self: start;
-            }
-        
             li:nth-child(n+6):not(.wp-block-post, .wp-block-button) {
 
                 body.scrolled & {
@@ -84,6 +80,20 @@
                 transition: .3s ease;
                 transition-delay: 1s;
                 opacity: 0;        
+            }
+
+            .wp-block-cover {
+                .wp-block-cover__background {
+                    transition: opacity 0.5s ease-in-out;
+                }
+
+                &:hover .wp-block-cover__background {
+                    opacity: 1;
+                }
+
+                .wp-block-heading a {
+                    text-decoration: none;
+                }
             }
         } 
     }
