--- a/templates/404.html
+++ b/templates/404.html
@@ -16,7 +16,7 @@
 
 <!-- wp:buttons -->
 <div class="wp-block-buttons"><!-- wp:button {"backgroundColor":"background","textColor":"primary","style":{"elements":{"link":{"color":{"text":"var:preset|color|primary"}}}}} -->
-<div class="wp-block-button"><a class="wp-block-button__link has-primary-color has-background-background-color has-text-color has-background has-link-color wp-element-button" href="http://localhost:8888/epic-lifts/">Homepage</a></div>
+<div class="wp-block-button"><a class="wp-block-button__link has-primary-color has-background-background-color has-text-color has-background has-link-color wp-element-button" href="https://viral.sumun.net/epic-lift/">Homepage</a></div>
 <!-- /wp:button --></div>
 <!-- /wp:buttons -->
 
