--- a/templates/archive-caso-de-exito.html
+++ b/templates/archive-caso-de-exito.html
@@ -1,31 +1,43 @@
 <!-- wp:template-part {"slug":"header","area":"header"} /-->
 
-<!-- wp:template-part {"slug":"hero-archive","tagName":"section","className":"mt-0"} /-->
+<!-- wp:group {"metadata":{"name":"Hero"},"align":"full","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group alignfull" style="margin-top:0;margin-bottom:0"><!-- wp:cover {"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/10/HERO-epic-power-lift.jpg","id":866,"dimRatio":70,"overlayColor":"primary-100","isUserOverlayColor":true,"minHeight":740,"align":"full","style":{"spacing":{"padding":{"top":"240px","right":"var:preset|spacing|30","left":"var:preset|spacing|30"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-cover alignfull" style="padding-top:240px;padding-right:var(--wp--preset--spacing--30);padding-left:var(--wp--preset--spacing--30);min-height:740px" id="hero"><span aria-hidden="true" class="wp-block-cover__background has-primary-100-background-color has-background-dim-70 has-background-dim"></span><img class="wp-block-cover__image-background wp-image-866" alt="" src="https://viral.sumun.net/epic-lift/wp-content/uploads/2024/10/HERO-epic-power-lift.jpg" data-object-fit="cover"/><div class="wp-block-cover__inner-container"><!-- wp:group {"layout":{"type":"constrained","contentSize":"704px","justifyContent":"left"}} -->
+<div class="wp-block-group"><!-- wp:query-title {"type":"archive","showPrefix":false} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group"><!-- wp:query {"queryId":9,"query":{"perPage":3,"pages":0,"offset":0,"postType":"caso-de-exito","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false,"parents":[]}} -->
-<div class="wp-block-query"><!-- wp:post-template {"layout":{"type":"grid","columnCount":3}} -->
-<!-- wp:block {"ref":239} /-->
-<!-- /wp:post-template -->
-
-<!-- wp:query-pagination {"paginationArrow":"arrow","layout":{"type":"flex","justifyContent":"center"}} -->
-<!-- wp:query-pagination-previous /-->
-
-<!-- wp:query-pagination-numbers /-->
-
-<!-- wp:query-pagination-next /-->
-<!-- /wp:query-pagination -->
-
-<!-- wp:query-no-results -->
-<!-- wp:paragraph {"placeholder":"Añade texto o bloques que se mostrarán cuando la consulta no devuelva ningún resultado."} -->
-<p></p>
+<!-- wp:paragraph {"fontSize":"heading-4"} -->
+<p class="has-heading-4-font-size">Descubre soluciones innovadoras para la eficiencia y seguridad de ascensores</p>
 <!-- /wp:paragraph -->
-<!-- /wp:query-no-results --></div>
-<!-- /wp:query --></main>
+
+<!-- wp:term-description /--></div>
 <!-- /wp:group -->
 
-<!-- wp:spacer {"height":"80px"} -->
-<div style="height:80px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|60","bottom":"var:preset|spacing|60"}}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
+<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--60);margin-bottom:var(--wp--preset--spacing--60)"><!-- wp:safe-svg/svg-icon {"svgURL":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/scroll-down.svg","imageID":211,"imageWidth":56,"imageHeight":57,"dimensionWidth":56,"dimensionHeight":57,"imageSizes":{"full":{"height":57,"width":56,"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/scroll-down.svg","orientation":"portrait"},"medium":{"height":"300","width":"300","url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/scroll-down.svg","orientation":"portrait"},"thumbnail":{"height":"150","width":"150","url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/scroll-down.svg","orientation":"portrait"}}} /-->
+
+<!-- wp:paragraph {"fontSize":"small"} -->
+<p class="has-small-font-size">Scroll</p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:group --></div></div>
+<!-- /wp:cover --></div>
+<!-- /wp:group -->
+
+<!-- wp:group {"metadata":{"name":"Breadcrumbs"},"style":{"spacing":{"padding":{"top":"0","bottom":"0"},"margin":{"top":"0","bottom":"0"}},"elements":{"link":{"color":{"text":"var:preset|color|neutral-80"}}},"typography":{"textTransform":"uppercase"}},"textColor":"neutral-80","fontSize":"small","layout":{"type":"constrained"}} -->
+<div class="wp-block-group has-neutral-80-color has-text-color has-link-color has-small-font-size" style="margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0;text-transform:uppercase"><!-- wp:shortcode -->
+[rank_math_breadcrumb]
+<!-- /wp:shortcode -->
+
+<!-- wp:separator {"align":"full","className":"is-style-wide","style":{"spacing":{"margin":{"top":"0","bottom":"var:preset|spacing|60"}}},"backgroundColor":"neutral-80"} -->
+<hr class="wp-block-separator alignfull has-text-color has-neutral-80-color has-alpha-channel-opacity has-neutral-80-background-color has-background is-style-wide" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--60)"/>
+<!-- /wp:separator --></div>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"loop-casos-exito","area":"uncategorized"} /-->
+
+<!-- wp:spacer {"height":"32px"} -->
+<div style="height:32px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
+
+<!-- wp:template-part {"slug":"soporte-cta-footer","tagName":"section"} /-->
 
 <!-- wp:template-part {"slug":"footer","area":"footer"} /-->
