--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,33 +1,31 @@
 <!-- wp:template-part {"slug":"header","area":"header"} /-->
 
-<!-- wp:template-part {"slug":"hero-archive"} /-->
+<!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"var:preset|spacing|10"}}},"layout":{"type":"default"}} -->
+<div id="hero" class="wp-block-group" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--10)"><!-- wp:cover {"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/10/bg-hero-actualidad-epic-lifts.jpg","id":1228,"dimRatio":50,"overlayColor":"primary","isUserOverlayColor":true,"style":{"spacing":{"padding":{"top":"240px"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-cover" style="padding-top:240px"><span aria-hidden="true" class="wp-block-cover__background has-primary-background-color has-background-dim"></span><img class="wp-block-cover__image-background wp-image-1228" alt="" src="https://viral.sumun.net/epic-lift/wp-content/uploads/2024/10/bg-hero-actualidad-epic-lifts.jpg" data-object-fit="cover"/><div class="wp-block-cover__inner-container"><!-- wp:query-title {"type":"archive"} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group"><!-- wp:query {"queryId":9,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
-<div class="wp-block-query"><!-- wp:post-template {"layout":{"type":"grid","columnCount":3}} -->
-<!-- wp:cover {"useFeaturedImage":true,"dimRatio":30,"overlayColor":"neutral-100","isUserOverlayColor":true,"isDark":false,"style":{"elements":{"link":{"color":{"text":"var:preset|color|background"}}}},"textColor":"background","layout":{"type":"constrained"}} -->
-<div class="wp-block-cover is-light has-background-color has-text-color has-link-color"><span aria-hidden="true" class="wp-block-cover__background has-neutral-100-background-color has-background-dim-30 has-background-dim"></span><div class="wp-block-cover__inner-container"><!-- wp:post-title /-->
-
-<!-- wp:post-date /-->
-
-<!-- wp:post-excerpt /--></div></div>
-<!-- /wp:cover -->
-<!-- /wp:post-template -->
-
-<!-- wp:query-pagination {"paginationArrow":"arrow","layout":{"type":"flex","justifyContent":"center"}} -->
-<!-- wp:query-pagination-previous /-->
-
-<!-- wp:query-pagination-numbers /-->
-
-<!-- wp:query-pagination-next /-->
-<!-- /wp:query-pagination -->
-
-<!-- wp:query-no-results -->
-<!-- wp:paragraph {"placeholder":"Añade texto o bloques que se mostrarán cuando la consulta no devuelva ningún resultado."} -->
-<p></p>
-<!-- /wp:paragraph -->
-<!-- /wp:query-no-results --></div>
-<!-- /wp:query --></main>
+<!-- wp:term-description {"fontSize":"heading-4"} /--></div></div>
+<!-- /wp:cover --></div>
 <!-- /wp:group -->
+
+<!-- wp:group {"layout":{"type":"constrained"}} -->
+<div class="wp-block-group"><!-- wp:group {"metadata":{"name":"Filter by"},"className":"filter-by","style":{"spacing":{"margin":{"top":"var:preset|spacing|70"}}},"layout":{"type":"flex","flexWrap":"wrap"}} -->
+<div class="wp-block-group filter-by" style="margin-top:var(--wp--preset--spacing--70)"><!-- wp:group {"style":{"spacing":{"blockGap":"0.5rem"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
+<div class="wp-block-group"><!-- wp:safe-svg/svg-icon {"svgURL":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/arrow-rigth.svg","imageID":228,"imageWidth":24,"imageHeight":24,"dimensionWidth":16,"dimensionHeight":16,"imageSizes":{"full":{"height":24,"width":24,"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/arrow-rigth.svg","orientation":"portrait"},"medium":{"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/arrow-rigth.svg","height":"300","width":"300","orientation":"landscape"},"thumbnail":{"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/arrow-rigth.svg","height":"150","width":"150","orientation":"landscape"}}} /-->
+
+<!-- wp:paragraph {"className":"is-style-title-has-image toggle-filter-by","style":{"layout":{"selfStretch":"fit","flexSize":null}}} -->
+<p class="is-style-title-has-image toggle-filter-by"><strong style="color: var(--wp--preset--color--foreground); font-family: var(--wp--preset--font-family--open-sans); font-size: var(--wp--preset--font-size--body); background-color: var(--wp--preset--color--background); display: inline !important;">Categorías:</strong></p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:group -->
+
+<!-- wp:categories /--></div>
+<!-- /wp:group --></div>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"loop-post"} /-->
+
+<!-- wp:spacer {"height":"72px"} -->
+<div style="height:72px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 
 <!-- wp:template-part {"slug":"footer","area":"footer"} /-->
