--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,41 @@
 <!-- wp:template-part {"slug":"header","area":"header"} /-->
 
 <!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"var:preset|spacing|10"}}},"layout":{"type":"default"}} -->
-<div id="hero" class="wp-block-group" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--10)"><!-- wp:cover {"overlayColor":"primary","isUserOverlayColor":true,"minHeight":520,"style":{"spacing":{"padding":{"top":"240px"}}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-cover" style="padding-top:240px;min-height:520px"><span aria-hidden="true" class="wp-block-cover__background has-primary-background-color has-background-dim-100 has-background-dim"></span><div class="wp-block-cover__inner-container"><!-- wp:heading {"level":1} -->
+<div id="hero" class="wp-block-group" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--10)"><!-- wp:cover {"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/10/bg-hero-actualidad-epic-lifts.jpg","id":1228,"dimRatio":50,"overlayColor":"primary-100","isUserOverlayColor":true,"style":{"spacing":{"padding":{"top":"240px"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-cover" style="padding-top:240px"><span aria-hidden="true" class="wp-block-cover__background has-primary-100-background-color has-background-dim"></span><img class="wp-block-cover__image-background wp-image-1228" alt="" src="https://viral.sumun.net/epic-lift/wp-content/uploads/2024/10/bg-hero-actualidad-epic-lifts.jpg" data-object-fit="cover"/><div class="wp-block-cover__inner-container"><!-- wp:heading {"level":1} -->
 <h1 class="wp-block-heading">Actualidad</h1>
 <!-- /wp:heading --></div></div>
 <!-- /wp:cover --></div>
 <!-- /wp:group -->
 
-<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group"><!-- wp:query {"queryId":9,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
-<div class="wp-block-query"><!-- wp:post-template {"layout":{"type":"grid","columnCount":3}} -->
-<!-- wp:cover {"useFeaturedImage":true,"dimRatio":30,"overlayColor":"neutral-100","isUserOverlayColor":true,"isDark":false,"style":{"elements":{"link":{"color":{"text":"var:preset|color|background"}}}},"textColor":"background","layout":{"type":"constrained"}} -->
-<div class="wp-block-cover is-light has-background-color has-text-color has-link-color"><span aria-hidden="true" class="wp-block-cover__background has-neutral-100-background-color has-background-dim-30 has-background-dim"></span><div class="wp-block-cover__inner-container"><!-- wp:post-title {"isLink":true} /-->
+<!-- wp:group {"metadata":{"name":"Breadcrumbs"},"style":{"spacing":{"padding":{"top":"0","bottom":"0"},"margin":{"top":"0","bottom":"0"}},"elements":{"link":{"color":{"text":"var:preset|color|neutral-80"}}},"typography":{"textTransform":"uppercase"}},"textColor":"neutral-80","fontSize":"small","layout":{"type":"constrained"}} -->
+<div class="wp-block-group has-neutral-80-color has-text-color has-link-color has-small-font-size" style="margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0;text-transform:uppercase"><!-- wp:shortcode -->
+[rank_math_breadcrumb]
+<!-- /wp:shortcode -->
 
-<!-- wp:post-date /-->
-
-<!-- wp:post-excerpt /--></div></div>
-<!-- /wp:cover -->
-<!-- /wp:post-template -->
-
-<!-- wp:query-pagination {"paginationArrow":"arrow","layout":{"type":"flex","justifyContent":"center"}} -->
-<!-- wp:query-pagination-previous /-->
-
-<!-- wp:query-pagination-numbers /-->
-
-<!-- wp:query-pagination-next /-->
-<!-- /wp:query-pagination -->
-
-<!-- wp:query-no-results -->
-<!-- wp:paragraph {"placeholder":"Añade texto o bloques que se mostrarán cuando la consulta no devuelva ningún resultado."} -->
-<p></p>
-<!-- /wp:paragraph -->
-<!-- /wp:query-no-results --></div>
-<!-- /wp:query --></main>
+<!-- wp:separator {"align":"full","className":"is-style-wide","style":{"spacing":{"margin":{"top":"0","bottom":"var:preset|spacing|60"}}},"backgroundColor":"neutral-80"} -->
+<hr class="wp-block-separator alignfull has-text-color has-neutral-80-color has-alpha-channel-opacity has-neutral-80-background-color has-background is-style-wide" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--60)"/>
+<!-- /wp:separator --></div>
 <!-- /wp:group -->
+
+<!-- wp:group {"layout":{"type":"constrained"}} -->
+<div class="wp-block-group"><!-- wp:group {"metadata":{"name":"Filter by"},"className":"filter-by","style":{"spacing":{"margin":{"top":"var:preset|spacing|70"}}},"layout":{"type":"flex","flexWrap":"wrap"}} -->
+<div class="wp-block-group filter-by" style="margin-top:var(--wp--preset--spacing--70)"><!-- wp:group {"style":{"spacing":{"blockGap":"0.5rem"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
+<div class="wp-block-group"><!-- wp:safe-svg/svg-icon {"svgURL":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/arrow-rigth.svg","imageID":228,"imageWidth":24,"imageHeight":24,"dimensionWidth":16,"dimensionHeight":16,"imageSizes":{"full":{"height":24,"width":24,"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/arrow-rigth.svg","orientation":"portrait"},"medium":{"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/arrow-rigth.svg","height":"300","width":"300","orientation":"landscape"},"thumbnail":{"url":"https://viral.sumun.net/epic-lift/wp-content/uploads/2024/08/arrow-rigth.svg","height":"150","width":"150","orientation":"landscape"}}} /-->
+
+<!-- wp:paragraph {"className":"is-style-title-has-image toggle-filter-by","style":{"layout":{"selfStretch":"fit","flexSize":null}}} -->
+<p class="is-style-title-has-image toggle-filter-by"><strong style="color: var(--wp--preset--color--foreground); font-family: var(--wp--preset--font-family--open-sans); font-size: var(--wp--preset--font-size--body); background-color: var(--wp--preset--color--background); display: inline !important;">Categorías:</strong></p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:group -->
+
+<!-- wp:categories /--></div>
+<!-- /wp:group --></div>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"loop-post"} /-->
+
+<!-- wp:spacer {"height":"72px"} -->
+<div style="height:72px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 
 <!-- wp:template-part {"slug":"footer","area":"footer"} /-->
