--- a/templates/single.html
+++ b/templates/single.html
@@ -1,15 +1,75 @@
 <!-- wp:template-part {"slug":"header","area":"header"} /-->
 
 <!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"var:preset|spacing|10"}}},"layout":{"type":"default"}} -->
-<div id="hero" class="wp-block-group" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--10)"><!-- wp:cover {"overlayColor":"primary","isUserOverlayColor":true,"minHeight":520,"style":{"spacing":{"padding":{"top":"240px"}}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-cover" style="padding-top:240px;min-height:520px"><span aria-hidden="true" class="wp-block-cover__background has-primary-background-color has-background-dim-100 has-background-dim"></span><div class="wp-block-cover__inner-container"><!-- wp:post-title {"level":1} /-->
+<div id="hero" class="wp-block-group" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--10)"><!-- wp:cover {"overlayColor":"primary","isUserOverlayColor":true,"minHeight":520,"style":{"spacing":{"padding":{"top":"240px","bottom":"var:preset|spacing|60"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-cover" style="padding-top:240px;padding-bottom:var(--wp--preset--spacing--60);min-height:520px"><span aria-hidden="true" class="wp-block-cover__background has-primary-background-color has-background-dim-100 has-background-dim"></span><div class="wp-block-cover__inner-container"><!-- wp:group {"layout":{"type":"constrained","contentSize":"1024px","justifyContent":"left"}} -->
+<div class="wp-block-group"><!-- wp:post-title {"level":1} /-->
 
-<!-- wp:post-excerpt /--></div></div>
+<!-- wp:post-excerpt {"fontSize":"heading-4"} /--></div>
+<!-- /wp:group --></div></div>
 <!-- /wp:cover --></div>
 <!-- /wp:group -->
 
-<!-- wp:group {"tagName":"main","layout":{"type":"default"}} -->
-<main class="wp-block-group"><!-- wp:post-content {"layout":{"type":"constrained"}} /--></main>
+<!-- wp:group {"metadata":{"name":"Breadcrumbs"},"style":{"spacing":{"padding":{"top":"0","bottom":"0"},"margin":{"top":"0","bottom":"0"}},"elements":{"link":{"color":{"text":"var:preset|color|neutral-80"}}},"typography":{"textTransform":"uppercase"}},"textColor":"neutral-80","fontSize":"small","layout":{"type":"constrained"}} -->
+<div class="wp-block-group has-neutral-80-color has-text-color has-link-color has-small-font-size" style="margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0;text-transform:uppercase"><!-- wp:shortcode -->
+[rank_math_breadcrumb]
+<!-- /wp:shortcode -->
+
+<!-- wp:separator {"align":"full","className":"is-style-wide","style":{"spacing":{"margin":{"top":"0","bottom":"var:preset|spacing|60"}}},"backgroundColor":"neutral-80"} -->
+<hr class="wp-block-separator alignfull has-text-color has-neutral-80-color has-alpha-channel-opacity has-neutral-80-background-color has-background is-style-wide" style="margin-top:0;margin-bottom:var(--wp--preset--spacing--60)"/>
+<!-- /wp:separator --></div>
 <!-- /wp:group -->
+
+<!-- wp:group {"tagName":"main","metadata":{"name":"Main"},"style":{"spacing":{"margin":{"top":"0"}}}} -->
+<main class="wp-block-group" style="margin-top:0"><!-- wp:group {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|80"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group" style="margin-bottom:var(--wp--preset--spacing--80)"><!-- wp:columns -->
+<div class="wp-block-columns"><!-- wp:column {"width":"66.66%"} -->
+<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:post-featured-image {"style":{"border":{"radius":"16px"}}} /--></div>
+<!-- /wp:column -->
+
+<!-- wp:column {"width":"33.33%"} -->
+<div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:group {"style":{"position":{"type":"sticky","top":"0px"}},"layout":{"type":"default"}} -->
+<div class="wp-block-group"><!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} -->
+<div class="wp-block-group"><!-- wp:paragraph -->
+<p><strong>Autor</strong></p>
+<!-- /wp:paragraph -->
+
+<!-- wp:post-author {"showAvatar":false,"showBio":false,"fontSize":"subtitle"} /--></div>
+<!-- /wp:group -->
+
+<!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} -->
+<div class="wp-block-group"><!-- wp:paragraph -->
+<p><strong>Fecha:</strong></p>
+<!-- /wp:paragraph -->
+
+<!-- wp:post-date {"format":"j \\d\\e F \\d\\e Y","fontSize":"subtitle"} /--></div>
+<!-- /wp:group -->
+
+<!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","orientation":"vertical","flexWrap":"nowrap"}} -->
+<div class="wp-block-group"><!-- wp:paragraph -->
+<p><strong>Publicado en</strong></p>
+<!-- /wp:paragraph -->
+
+<!-- wp:post-terms {"term":"category","fontSize":"subtitle"} /--></div>
+<!-- /wp:group --></div>
+<!-- /wp:group --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns --></div>
+<!-- /wp:group -->
+
+<!-- wp:group {"layout":{"type":"constrained","contentSize":"900px"}} -->
+<div class="wp-block-group"><!-- wp:post-content /--></div>
+<!-- /wp:group -->
+
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|30","bottom":"var:preset|spacing|30"}},"border":{"top":{"color":"var:preset|color|neutral-30","width":"1px"},"right":[],"bottom":{"color":"var:preset|color|neutral-30","width":"1px"},"left":[]}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group" style="border-top-color:var(--wp--preset--color--neutral-30);border-top-width:1px;border-bottom-color:var(--wp--preset--color--neutral-30);border-bottom-width:1px;padding-top:var(--wp--preset--spacing--30);padding-bottom:var(--wp--preset--spacing--30)"><!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+<div class="wp-block-group"><!-- wp:post-navigation-link {"type":"previous","showTitle":true,"arrow":"arrow","fontSize":"subtitle"} /-->
+
+<!-- wp:post-navigation-link {"showTitle":true,"arrow":"arrow","fontSize":"subtitle"} /--></div>
+<!-- /wp:group --></div>
+<!-- /wp:group --></main>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"soporte-cta-footer","tagName":"section","area":"footer"} /-->
 
 <!-- wp:template-part {"slug":"footer","area":"footer"} /-->
