--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,7 +1,7 @@
 .wp-element-button, .wp-block-button__link {
 	transition: transform 0.3s ease;
 	&:hover {
-		transform: scale(1.1);
+		width: 110%;
 	}
 }
 
