--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/mixins' as *;
+
 .wp-block-navigation__responsive-container.is-menu-open {
     max-width: var(--wp--custom--layout--wide);
     padding: var(wp--custom--layout--block-gap);
@@ -100,7 +102,7 @@
 
     @media ($below-tablet) {
         
-        width: 100% !important;
+        width: calc(100% - 64px);
 
         ul.max-mega-menu {
             
