--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/mixins' as *;
+
 #masthead, #hero {
     animation: bodyAnimation ease-in-out 1s;
     animation-iteration-count: 1;
