--- a/sass/components/_group.scss
+++ b/sass/components/_group.scss
@@ -44,3 +44,7 @@
         top: calc(80px + var(--wp-admin--admin-bar--position-offset, 0px));
     }
 }
+
+.wp-block-group.has-background {
+    padding: var(--wp--preset--spacing--30);
+}
